fix alignment of the search bar and sort by

--- a/frontend/src/pages/HomePage/HomePage.module.css
+++ b/frontend/src/pages/HomePage/HomePage.module.css
@@ -1,10 +1,10 @@
 .home-container {
   display: flex;
-  /* height: 100%; */
+  height: 100%;
 }
 
 .filter-container {
-  /* flex: 1; */
+  flex: 1;
   /* max-height: 550px;
   overflow-y: auto;
   padding:10px; */
@@ -20,8 +20,6 @@
 .search-and-sort-panel {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
   flex: 1;
 }
 
